--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ set(SOURCE_FILES src/main.c src/glad.c)
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 target_include_directories(${PROJECT_NAME} PRIVATE include)
 target_link_directories(${PROJECT_NAME} PRIVATE lib)
-target_link_libraries(${PROJECT_NAME} m glfw3 X11 pthread dl)
+target_link_libraries(${PROJECT_NAME} m SDL3 X11 pthread dl)
